--- a/css/style.css
+++ b/css/style.css
@@ -60,11 +60,10 @@ img{
 .centrar-texto{
     text-align: center;
 }
-
-/*Header*/
+ 
 .header{
     background-image: url(../img/banner.jpg);
-    height: 60rem;
+    height: 60rem;  
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -140,11 +139,15 @@ img{
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
+    border: none;
 }
 @media (min-width: 768px) {
     .boton{
         display: inline-block;
     }
+}
+.boton:hover{
+    cursor: pointer;
 }
 .boton--primario{/*Modificador boton*/
     background-color: var(--negro);
@@ -196,4 +199,73 @@ h5{
 }
 .barra__footer{
     padding-top: 0;
+}
+
+/*Sobre Nosotros*/
+@media (min-width: 768px) {
+    .sobre-nosotros{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        column-gap: 2rem;
+    }
+}
+
+/*Cursos*/
+.curso{
+    padding: 3rem 0;
+    border-bottom: 1px solid var(--gris);
+}
+
+@media (min-width: 768px) {
+    .curso{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+    }
+}
+.curso:last-of-type{
+    border: none;
+}
+.curso__label{
+    font-family: var(--fuenteHeading);
+    font-weight: 700;
+}
+.curso__info{
+    font-weight: 400;
+}
+.curso__label,
+.curso__info{
+    font-size: 2rem;
+}
+
+/*Contacto*/
+.contacto-bg{
+    background-image: url(../img/contacto.jpg);
+    height: 40rem;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/*Formulario*/
+.formulario{
+    background-color: var(--blanco);
+    margin: -5rem auto 0 auto;
+    width: 95%;
+    padding: 5rem;
+}
+.campo{
+    display: flex;
+    margin-bottom: 2rem;
+    gap: 2rem;
+}
+.campo__label{
+    flex: 0 0 9rem;
+    text-align: right;
+}
+.campo__field{
+    flex: 1;
+    border: 1px solid var(--gris);
+}
+.campo__field--textarea{
+    height: 20rem;
 }
